--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     ],
     "activationEvents": [
         "onCommand:cert-gen.sign",
-        "onCommand:cert-gen.validate"
+        "onCommand:cert-gen.validate",
+        "onCommand:cert-gen.keygen"
     ],
     "main": "./out/extension.js",
     "contributes": {
@@ -24,6 +25,10 @@
             {
                 "command": "cert-gen.validate",
                 "title": "Cert Gen: Validate Text Document Certificate"
+            },
+            {
+                "command": "cert-gen.keygen",
+                "title": "Cert Gen: Generate New Keys"
             }
         ],
         "configuration": [
@@ -31,15 +36,15 @@
                 "title": "CertGen Keys",
                 "properties": {
                     "certgen.key.n": {
-                        "type": "integer",
+                        "type": "string",
                         "description": "The N value of both public and private keys"
                     },
                     "certgen.key.e": {
-                        "type": "integer",
+                        "type": "string",
                         "description": "The E value of the public key"
                     },
                     "certgen.key.d": {
-                        "type": "integer",
+                        "type": "string",
                         "description": "The D value of the private key"
                     }
                 }
